[WIP] website_snippet_all: Bug fixes

--- a/website_snippet_all/static/src/scss/mixins.scss
+++ b/website_snippet_all/static/src/scss/mixins.scss
@@ -132,7 +132,7 @@
 // Themes specific style.
 //
 // This was introduced as a post-stable-12.0 review. The goal is to regroup
-// similar block of scss code (accross different theme) in theme_common
+// similar block of scss code (accross different theme) in website_snippet_all
 // mixins which are then simply called in the related themes. This will ease
 // stable fixes and master refactorings.
 //------------------------------------------------------------------------------
