--- a/website_snippet_all/views/s_banner_parallax.xml
+++ b/website_snippet_all/views/s_banner_parallax.xml
@@ -7,7 +7,7 @@
                     <div class="col-lg-9 col-md-12 hero-bg">
                         <h1>Present your products</h1>
                         <h2>with this theme.</h2>
-                        <img src="/web/image/theme_common.image_content_01" alt="#" class="img img-fluid"/>
+                        <img src="/web/image/website_snippet_all.image_content_01" alt="#" class="img img-fluid"/>
                     </div>
                 </div>
             </div>
