--- a/website_snippet_all/views/s_event_list.xml
+++ b/website_snippet_all/views/s_event_list.xml
@@ -97,7 +97,7 @@
                                 <div class="s_event_list_year">2014</div>
                                 <div class="s_event_list_time">ALL DAY</div>
                             </time>
-                            <img src="/web/image/theme_common.image_content_09" class="img-fluid"/>
+                            <img src="/web/image/website_snippet_all.image_content_09" class="img-fluid"/>
                             <div class="s_event_list_info bg-white">
                                 <h4 class="s_event_list_title">Your Event Name</h4>
                                 <p class="s_event_list_desc">Write a description of your event here.</p>
