--- a/website_snippet_all/views/s_images_carousel.xml
+++ b/website_snippet_all/views/s_images_carousel.xml
@@ -19,19 +19,19 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="img img-fluid" src="/web/image/theme_common.image_content_24" alt=""/>
+                                <img class="img img-fluid" src="/web/image/website_snippet_all.image_content_24" alt=""/>
                                 <div class="carousel-caption">
                                     <span>A <b>caption</b> for this image</span>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="img img-fluid" src="/web/image/theme_common.image_content_25" alt=""/>
+                                <img class="img img-fluid" src="/web/image/website_snippet_all.image_content_25" alt=""/>
                                 <div class="carousel-caption">
                                     <span>A <b>caption</b> for this image</span>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="img img-fluid" src="/web/image/theme_common.image_content_26" alt=""/>
+                                <img class="img img-fluid" src="/web/image/website_snippet_all.image_content_26" alt=""/>
                                 <div class="carousel-caption">
                                     <span>A <b>caption</b> for this image</span>
                                 </div>
