--- a/website_snippet_all/views/s_product_list.xml
+++ b/website_snippet_all/views/s_product_list.xml
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-4 col-6">
                         <a href="http://www.odoo.com">
-                            <img src="/web/image/theme_common.image_product_01" alt="#" class="img img-fluid"/>
+                            <img src="/web/image/website_snippet_all.image_product_01" alt="#" class="img img-fluid"/>
                         </a>
                         <div class="s_product_list_item_link">
                             <a href="http://www.odoo.com" class="btn btn-secondary">View item</a>
@@ -14,7 +14,7 @@
                     </div>
                     <div class="col-lg-2 col-md-4 col-6">
                         <a href="http://www.odoo.com">
-                            <img src="/web/image/theme_common.image_product_02" alt="#" class="img img-fluid"/>
+                            <img src="/web/image/website_snippet_all.image_product_02" alt="#" class="img img-fluid"/>
                         </a>
                         <div class="s_product_list_item_link">
                             <a href="http://www.odoo.com" class="btn btn-secondary">View item</a>
@@ -22,7 +22,7 @@
                     </div>
                     <div class="col-lg-2 col-md-4 col-6">
                         <a href="http://www.odoo.com">
-                            <img src="/web/image/theme_common.image_product_03" alt="#" class="img img-fluid"/>
+                            <img src="/web/image/website_snippet_all.image_product_03" alt="#" class="img img-fluid"/>
                         </a>
                         <div class="s_product_list_item_link">
                             <a href="http://www.odoo.com" class="btn btn-secondary">View item</a>
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-lg-2 col-md-4 col-6">
                         <a href="http://www.odoo.com">
-                            <img src="/web/image/theme_common.image_product_04" alt="#" class="img img-fluid"/>
+                            <img src="/web/image/website_snippet_all.image_product_04" alt="#" class="img img-fluid"/>
                         </a>
                         <div class="s_product_list_item_link">
                             <a href="http://www.odoo.com" class="btn btn-secondary">View item</a>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-lg-2 col-md-4 col-6">
                         <a href="http://www.odoo.com">
-                            <img src="/web/image/theme_common.image_product_05" alt="#" class="img img-fluid"/>
+                            <img src="/web/image/website_snippet_all.image_product_05" alt="#" class="img img-fluid"/>
                         </a>
                         <div class="s_product_list_item_link">
                             <a href="http://www.odoo.com" class="btn btn-secondary">View item</a>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="col-lg-2 col-md-4 col-6">
                         <a href="http://www.odoo.com">
-                            <img src="/web/image/theme_common.image_product_06" alt="#" class="img img-fluid"/>
+                            <img src="/web/image/website_snippet_all.image_product_06" alt="#" class="img img-fluid"/>
                         </a>
                         <div class="s_product_list_item_link">
                             <a href="http://www.odoo.com" class="btn btn-secondary">View item</a>
