--- a/website_snippet_all/views/s_products_carousel.xml
+++ b/website_snippet_all/views/s_products_carousel.xml
@@ -17,32 +17,32 @@
                                 <div class="row">
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_01" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_01" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_02" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_02" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_03" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_03" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_04" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_04" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_05" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_05" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_06" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_06" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                 </div>
@@ -60,32 +60,32 @@
                                 <div class="row">
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_01" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_01" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_02" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_02" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_03" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_03" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_04" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_04" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_05" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_05" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                     <div class="col-lg-2 pt16 pb16 widget">
                                         <a href="#">
-                                            <img src="/web/image/theme_common.image_product_06" alt="" class="img img-fluid d-block mx-auto"/>
+                                            <img src="/web/image/website_snippet_all.image_product_06" alt="" class="img img-fluid d-block mx-auto"/>
                                         </a>
                                     </div>
                                 </div>
