--- a/website_snippet_all/views/s_team_profiles.xml
+++ b/website_snippet_all/views/s_team_profiles.xml
@@ -7,7 +7,7 @@
                     <div class="col-lg-4 pt16 pb16">
                         <div class="card bg-white text-center">
                             <div class="card-body">
-                                <img class="img img-fluid rounded-circle m-3 mx-auto" src="/web/image/theme_common.image_content_18" style="width: 50%;" alt=""/>
+                                <img class="img img-fluid rounded-circle m-3 mx-auto" src="/web/image/website_snippet_all.image_content_18" style="width: 50%;" alt=""/>
                                 <h2 class="card-title">John DOE</h2>
                                 <h6 class="text-primary">- ART DIRECTOR -</h6>
                                 <p class="card-text">Use this paragraph to write a short, sweet and successful resume about this member of your team.</p>
@@ -31,7 +31,7 @@
                     <div class="col-lg-4 pt16 pb16">
                         <div class="card bg-white text-center">
                             <div class="card-body">
-                                <img class="img img-fluid rounded-circle m-3" src="/web/image/theme_common.image_content_09" style="width: 50%;" alt=""/>
+                                <img class="img img-fluid rounded-circle m-3" src="/web/image/website_snippet_all.image_content_09" style="width: 50%;" alt=""/>
                                 <h2 class="card-title">John DOE</h2>
                                 <h6 class="text-primary">- PARTNER -</h6>
                                 <p class="card-text">Use this paragraph to write a short, sweet and successful resume about this member of your team.</p>
@@ -46,7 +46,7 @@
                     <div class="col-lg-4 pt16 pb16">
                         <div class="card bg-white text-center">
                             <div class="card-body">
-                                <img class="img img-fluid rounded-circle m-3" src="/web/image/theme_common.image_content_11" style="width: 50%;" alt=""/>
+                                <img class="img img-fluid rounded-circle m-3" src="/web/image/website_snippet_all.image_content_11" style="width: 50%;" alt=""/>
                                 <h2 class="card-title">John DOE</h2>
                                 <h6 class="text-primary">- TRAINEE -</h6>
                                 <p class="card-text">Use this paragraph to write a short, sweet and successful resume about this member of your team.</p>
