--- a/website_snippet_all/views/image_content.xml
+++ b/website_snippet_all/views/image_content.xml
@@ -31,7 +31,7 @@
     <record id="image_content_04" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_04</field>
         <field name="name">website_snippet_all.image_content_04</field>
-        <field name="url">/theme_enark/static/src/img/content/content_img_04.png</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_04.png</field>
     </record>
     <record id="image_content_05" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_05</field>
@@ -72,37 +72,103 @@
     <record id="image_content_12" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_12</field>
         <field name="name">website_snippet_all.image_content_12</field>
-        <field name="url">/theme_enark/static/src/img/content/content_img_12.jpg</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
     </record>
 -->
     <record id="image_content_13" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_13</field>
         <field name="name">website_snippet_all.image_content_13</field>
-        <field name="url">/theme_enark/static/src/img/content/content_img_13.jpg</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
     </record>
     <record id="image_content_14" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_14</field>
         <field name="name">website_snippet_all.image_content_14</field>
-        <field name="url">/theme_enark/static/src/img/content/content_img_14.png</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_14.png</field>
     </record>
     <record id="image_content_15" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_15</field>
         <field name="name">website_snippet_all.image_content_15</field>
-        <field name="url">/theme_enark/static/src/img/content/content_img_15.png</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_15.png</field>
     </record>
     <record id="image_content_16" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_16</field>
         <field name="name">website_snippet_all.image_content_16</field>
-        <field name="url">/theme_enark/static/src/img/content/content_img_16.png</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_16.png</field>
     </record>
     <record id="image_content_17" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_17</field>
         <field name="name">website_snippet_all.image_content_17</field>
-        <field name="url">/theme_enark/static/src/img/content/content_img_17.png</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_17.png</field>
     </record>
     <record id="image_content_18" model="ir.attachment">
         <field name="key">website_snippet_all.image_content_18</field>
         <field name="name">website_snippet_all.image_content_18</field>
-        <field name="url">/theme_enark/static/src/img/content/content_img_18.png</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_18.png</field>
     </record>
+    <record id="image_content_20" model="ir.attachment">
+        <field name="key">website_snippet_all.image_content_20</field>
+        <field name="name">website_snippet_all.image_content_20</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
+    </record>
+    <record id="image_content_21" model="ir.attachment">
+        <field name="key">website_snippet_all.image_content_21</field>
+        <field name="name">website_snippet_all.image_content_21</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
+    </record>
+    <record id="image_content_22" model="ir.attachment">
+        <field name="key">website_snippet_all.image_content_22</field>
+        <field name="name">website_snippet_all.image_content_22</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
+    </record>
+    <record id="image_content_23" model="ir.attachment">
+        <field name="key">website_snippet_all.image_content_23</field>
+        <field name="name">website_snippet_all.image_content_23</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
+    </record>
+    <record id="image_content_24" model="ir.attachment">
+        <field name="key">website_snippet_all.image_content_24</field>
+        <field name="name">website_snippet_all.image_content_24</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
+    </record>
+    <record id="image_content_25" model="ir.attachment">
+        <field name="key">website_snippet_all.image_content_25</field>
+        <field name="name">website_snippet_all.image_content_25</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
+    </record>
+    <record id="image_content_26" model="ir.attachment">
+        <field name="key">website_snippet_all.image_content_26</field>
+        <field name="name">website_snippet_all.image_content_26</field>
+        <field name="url">/website_snippet_all/static/src/img/content/content_img_12.jpg</field>
+    </record>
+    <record id="image_product_01" model="ir.attachment">
+        <field name="key">website_snippet_all.image_product_01</field>
+        <field name="name">website_snippet_all.image_product_01</field>
+        <field name="url">/website_snippet_all/static/src/img/content/product_img_01.jpg</field>
+    </record>
+    <record id="image_product_02" model="ir.attachment">
+        <field name="key">website_snippet_all.image_product_02</field>
+        <field name="name">website_snippet_all.image_product_02</field>
+        <field name="url">/website_snippet_all/static/src/img/content/product_img_02.jpg</field>
+    </record>
+    <record id="image_product_03" model="ir.attachment">
+        <field name="key">website_snippet_all.image_product_03</field>
+        <field name="name">website_snippet_all.image_product_03</field>
+        <field name="url">/website_snippet_all/static/src/img/content/product_img_03.jpg</field>
+    </record>
+    <record id="image_product_04" model="ir.attachment">
+        <field name="key">website_snippet_all.image_product_04</field>
+        <field name="name">website_snippet_all.image_product_04</field>
+        <field name="url">/website_snippet_all/static/src/img/content/product_img_04.jpg</field>
+    </record>
+    <record id="image_product_05" model="ir.attachment">
+        <field name="key">website_snippet_all.image_product_05</field>
+        <field name="name">website_snippet_all.image_product_05</field>
+        <field name="url">/website_snippet_all/static/src/img/content/product_img_05.jpg</field>
+    </record>
+    <record id="image_product_06" model="ir.attachment">
+        <field name="key">website_snippet_all.image_product_06</field>
+        <field name="name">website_snippet_all.image_product_06</field>
+        <field name="url">/website_snippet_all/static/src/img/content/product_img_06.jpg</field>
+    </record>
+
 </odoo>
