--- a/website_snippet_all/views/s_big_image_parallax.xml
+++ b/website_snippet_all/views/s_big_image_parallax.xml
@@ -5,7 +5,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mt32 s_big_image_parallax_content" data-name="Content Block">
-                        <img src="/web/image/theme_common.image_content_03" class="img-fluid d-block mx-auto"/>
+                        <img src="/web/image/website_snippet_all.image_content_03" class="img-fluid d-block mx-auto"/>
                     </div>
                     <div class="col-lg-12 text-center" data-name="Title Block">
                         <h3>A Business Theme For Odoo CMS</h3>
