--- a/website_snippet_all/views/s_color_blocks_img.xml
+++ b/website_snippet_all/views/s_color_blocks_img.xml
@@ -12,21 +12,21 @@
                         <div class="s_color_blocks_img_title bg-delta">
                             <h5 class="text-muted text-center">Resume with a Subtitle</h5>
                             <h4 class="text-center mb32">This Is a Column</h4>
-                            <img src="/web/image/theme_common.image_content_10" class="img-fluid d-block mx-auto"/>
+                            <img src="/web/image/website_snippet_all.image_content_10" class="img-fluid d-block mx-auto"/>
                         </div>
                     </div>
                     <div class="col-lg-4 s_color_blocks_img_block">
                         <div class="s_color_blocks_img_title bg-beta">
                             <h5 class="text-muted text-center">Resume with a Subtitle</h5>
                             <h4 class="text-center mb32">This Is a Column</h4>
-                            <img src="/web/image/theme_common.image_content_11" class="img-fluid d-block mx-auto"/>
+                            <img src="/web/image/website_snippet_all.image_content_11" class="img-fluid d-block mx-auto"/>
                         </div>
                     </div>
                     <div class="col-lg-4 s_color_blocks_img_block">
                         <div class="s_color_blocks_img_title bg-gamma">
                             <h5 class="text-muted text-center">Resume with a Subtitle</h5>
                             <h4 class="text-center mb32">This Is a Column</h4>
-                            <img src="/web/image/theme_common.image_content_13" class="img-fluid d-block mx-auto"/>
+                            <img src="/web/image/website_snippet_all.image_content_13" class="img-fluid d-block mx-auto"/>
                         </div>
                     </div>
                 </div>
