--- a/website_snippet_all/views/s_css_slider.xml
+++ b/website_snippet_all/views/s_css_slider.xml
@@ -10,21 +10,21 @@
                             <h3>Slide Title</h3>
                             <p>Slide Description</p>
                         </div>
-                        <img class="o_not-animable" src="/web/image/theme_common.image_content_20"/>
+                        <img class="o_not-animable" src="/web/image/website_snippet_all.image_content_20"/>
                     </div>
                     <div class="slide row">
                         <div class="info col-lg-3">
                             <h3>Slide Title</h3>
                             <p>Slide Description</p>
                         </div>
-                        <img class="o_not-animable" src="/web/image/theme_common.image_content_21"/>
+                        <img class="o_not-animable" src="/web/image/website_snippet_all.image_content_21"/>
                     </div>
                     <div class="slide row">
                         <div class="info col-lg-3">
                             <h3>Slide Title</h3>
                             <p>Slide Description</p>
                         </div>
-                        <img class="o_not-animable" src="/web/image/theme_common.image_content_22"/>
+                        <img class="o_not-animable" src="/web/image/website_snippet_all.image_content_22"/>
                     </div>
                 </div>
                 <ul class="navigation">
