--- a/website_snippet_all/views/s_features_carousel.xml
+++ b/website_snippet_all/views/s_features_carousel.xml
@@ -28,7 +28,7 @@
                                 <p class="mt32 text-center">This theme does not limit you to one setup, we prefer to give you options. From boxed layout to wide, left sidebars to right and multiple headers; we let you decide. That’s right, you can have your cake and eat some too.</p>
                             </div>
                             <div class="col-lg-6 pt16">
-                                <img class="img img-fluid d-block mx-auto" src="/web/image/theme_common.image_content_04" alt=""/>
+                                <img class="img img-fluid d-block mx-auto" src="/web/image/website_snippet_all.image_content_04" alt=""/>
                             </div>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                                 <p class="mt32 text-center">This theme does not limit you to one setup, we prefer to give you options. From boxed layout to wide, left sidebars to right and multiple headers; we let you decide. That’s right, you can have your cake and eat some too.</p>
                             </div>
                             <div class="col-lg-6 pt16">
-                                <img class="img img-fluid d-block mx-auto" src="/web/image/theme_common.image_content_03" alt=""/>
+                                <img class="img img-fluid d-block mx-auto" src="/web/image/website_snippet_all.image_content_03" alt=""/>
                             </div>
                         </div>
                     </div>
