--- a/website_snippet_all/views/s_full_menu.xml
+++ b/website_snippet_all/views/s_full_menu.xml
@@ -12,7 +12,7 @@
                     <div class="col-lg-10 s_full_menu_content">
                         <div class="row">
                             <div class="col-lg-4 text-center">
-                                <img src="/web/image/theme_common.image_content_13" alt="#" class="img img-fluid d-block mx-auto"/>
+                                <img src="/web/image/website_snippet_all.image_content_13" alt="#" class="img img-fluid d-block mx-auto"/>
                             </div>
                             <div class="col-lg-8 s_full_menu_content_description">
                                 <h4>Sandwich with Ham and Cheese<span class="slash"><span class="price"> | €</span> 9.00</span></h4>
@@ -21,7 +21,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-4 text-center">
-                                <img src="/web/image/theme_common.image_content_14" alt="#" class="img img-fluid d-block mx-auto"/>
+                                <img src="/web/image/website_snippet_all.image_content_14" alt="#" class="img img-fluid d-block mx-auto"/>
                             </div>
                             <div class="col-lg-8 s_full_menu_content_description">
                                 <h4>Honey Dijon Chicken Burger<span class="slash"><span class="price"> | €</span> 12.00</span></h4>
