--- a/website_snippet_all/views/s_header_text_big_picture.xml
+++ b/website_snippet_all/views/s_header_text_big_picture.xml
@@ -14,7 +14,7 @@
                         <p>The solution to that is to create a product that, in its designed appearance and function, expresses a personality or tells a story. Products that carry such attributes are more likely to give off a stronger expression that will attract more consumers. On that note it is important to keep in mind that design expression does not only concern the appearance of a product, but also its function. For example, as humans our appearance as well as our actions are subject to people's judgment when they are making a first impression of us.</p>
                     </div>
                     <div class="col-lg-12 s_header_text_big_picture_picturecol">
-                        <img src="/web/image/theme_common.image_content_04" alt="#" class="img img-fluid"/>
+                        <img src="/web/image/website_snippet_all.image_content_04" alt="#" class="img img-fluid"/>
                     </div>
                 </div>
             </div>
