--- a/website_snippet_all/views/s_media_list.xml
+++ b/website_snippet_all/views/s_media_list.xml
@@ -5,7 +5,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="/web/image/theme_common.image_content_20" class="img img-fluid" alt=""/>
+                        <img src="/web/image/website_snippet_all.image_content_20" class="img img-fluid" alt=""/>
                     </div>
                     <div class="col-lg-8 s_media_list_body">
                         <h3>Media heading</h3>
@@ -17,7 +17,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="/web/image/theme_common.image_content_21" class="img img-fluid" alt=""/>
+                        <img src="/web/image/website_snippet_all.image_content_21" class="img img-fluid" alt=""/>
                     </div>
                     <div class="col-lg-8 s_media_list_body">
                         <h3>Event Heading</h3>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col-lg-4">
-                        <img class="img img-fluid" src="/web/image/theme_common.image_content_22" alt=""/>
+                        <img class="img img-fluid" src="/web/image/website_snippet_all.image_content_22" alt=""/>
                     </div>
                     <div class="col-lg-8 s_media_list_body">
                         <h3>Post heading</h3>
