--- a/website_snippet_all/views/s_profile.xml
+++ b/website_snippet_all/views/s_profile.xml
@@ -17,7 +17,7 @@
                                 <p> <strong>Skills: </strong><span class="tags">html5, css3, jquery, bootstrap3</span></p>
                             </div>
                             <div class="col-lg-4">
-                                <img src="/web/image/theme_common.image_content_14" alt="" class="rounded-circle img-fluid d-block mx-auto"/>
+                                <img src="/web/image/website_snippet_all.image_content_14" alt="" class="rounded-circle img-fluid d-block mx-auto"/>
                             </div>
                         </div>
                         <div class="row s_profile_box_divider text-center">
