--- a/website_snippet_all/views/s_text_picture_text.xml
+++ b/website_snippet_all/views/s_text_picture_text.xml
@@ -9,7 +9,7 @@
                         <p>Product design is the process of creating a new product to be sold by a business to its customers. A very broad concept, it is essentially the efficient and effective generation and development of ideas through a process that leads to new products.</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <img src="/web/image/theme_common.image_content_05" alt="#" class="img img-fluid"/>
+                        <img src="/web/image/website_snippet_all.image_content_05" alt="#" class="img img-fluid"/>
                         <a href="#">DISCOVER THE PRODUCT</a>
                     </div>
                     <div class="col-lg-4">
