--- a/website_snippet_all/views/s_three_columns_circle.xml
+++ b/website_snippet_all/views/s_three_columns_circle.xml
@@ -9,19 +9,19 @@
                         <h3 class="text-muted ">Write Something Nice for Your Users</h3>
                     </div>
                     <div class="mt32 mb16 padding-l-r-32 col-lg-4">
-                        <img src="/web/image/theme_common.image_content_10" class="img-fluid rounded-circle d-block mx-auto"/>
+                        <img src="/web/image/website_snippet_all.image_content_10" class="img-fluid rounded-circle d-block mx-auto"/>
                         <h4 class="mt32 text-center">This Is a Column</h4>
                         <h5 class="text-muted text-center">Resume with a Subtitle</h5>
                         <p class="text-justify mt16">A great way to catch your reader's attention is to tell a story. Everything you consider writing can be told as a story. Write one or two paragraphs describing your product or services. To be successful your content needs to be useful to your readers. Start with the customer. Find out what they want and give it to them.</p>
                     </div>
                     <div class="mt32 mb16 padding-l-r-32 col-lg-4">
-                        <img src="/web/image/theme_common.image_content_11" class="img-fluid rounded-circle d-block mx-auto"/>
+                        <img src="/web/image/website_snippet_all.image_content_11" class="img-fluid rounded-circle d-block mx-auto"/>
                         <h4 class="mt32 text-center">This Is a Column</h4>
                         <h5 class="text-muted text-center">Resume with a Subtitle</h5>
                         <p class="text-justify mt16">A great way to catch your reader's attention is to tell a story. Everything you consider writing can be told as a story. Write one or two paragraphs describing your product or services. To be successful your content needs to be useful to your readers. Start with the customer. Find out what they want and give it to them.</p>
                     </div>
                     <div class="mt32 mb16 padding-l-r-32 col-lg-4">
-                        <img src="/web/image/theme_common.image_content_13" class="img-fluid rounded-circle d-block mx-auto"/>
+                        <img src="/web/image/website_snippet_all.image_content_13" class="img-fluid rounded-circle d-block mx-auto"/>
                         <h4 class="mt32 text-center">This Is a Column</h4>
                         <h5 class="text-muted text-center">Resume with a Subtitle</h5>
                         <p class="text-justify mt16">A great way to catch your reader's attention is to tell a story. Everything you consider writing can be told as a story. Write one or two paragraphs describing your product or services. To be successful your content needs to be useful to your readers. Start with the customer. Find out what they want and give it to them.</p>
